# Course_work5

./: .gitignore  README.md  pyproject.toml
project/: config.py  database.ini  main.py  utils.py
