[tool.poetry]
name = "course-work5"
version = "0.1.0"
description = ""
authors = ["GeydarovRufat"]
readme = "README.md"
packages = [{include = "course_work5"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
